# bapi

./: .gitignore  404.html  CHANGELOG.md  Dockerfile  README.md  docker-entrypoint.sh  gen_docs.py  gen_json.py  gen_openapi.py  index.html  mkdocs.yml  openapi.json  pyproject.toml  run.sh
.github/workflows/: ci.yml
api/: index.html  openapi.json
app/: dependencies.py  logging.py  main.py  models.py  settings.py
app/api/: deps.py
app/api/v1/: account.py  api.py  directive.py  directive_test.py  file.py  file_test.py  query.py  query_test.py
app/core/: base.py  beancount.py  cache.py  mutate.py  mutate_test.py  search.py  settings.py
app/core/auth/: jwt.py  jwt_test.py
app/core/storage/: local.py  redis.py  redis_test.py  s3.py
app/internal/: base.py  beancount.py  beancount_test.py  cache.py  mutate.py  mutate_test.py  s3.py  s3_test.py  search.py  search_test.py  settings.py  storage.py
app/internal/auth/: jwt.py  jwt_test.py
app/internal/providers/storage/: local.py  s3.py  s3_test.py
app/internal/sql/: crud.py  db.py  models.py  schemas.py
app/internal/storage/: local.py  redis.py  redis_test.py  s3.py  s3_test.py
app/models/: beancount.py  core.py  core_test.py  custom.py  data.py  data_test.py  directives.py  directives_test.py  query.py
app/routers/: account.py  account_test.py  balance.py  balance_test.py  beancount.py  budget.py  directive.py  directive_test.py  file.py  file_test.py  query.py  query_test.py  realize.py  realize_test.py  transactions.py  transactions_test.py
app/tests/: conftest.py
app/tests/api/v1/: test_account.py  test_directive.py  test_file.py  test_query.py
app/tests/core/: test_mutate.py  test_search.py
app/tests/core/auth/: test_jwt.py
app/tests/core/storage/: test_redis.py  test_s3.py
docs/: filtering.md  index.html  index.md  jwt.md  redis.md  s3.md
filtering/: index.html
jwt/: index.html
redis/: index.html
s3/: index.html
scripts/: cache.py  gen_openapi.py
testing/: common.py  file.json  static.beancount  static.json
tests/generator/: Dockerfile  app.py
tests/redis/: .env.no-pickle  .env.pickle  conftest.py  docker-compose.yml  test_redis.py  test_redis_cached.py
tests/redis/migration/: Dockerfile  migration.py
