[tool.poetry]
name = "bapi"
version = "0.0.1"
description = "The Beancount API (bapi) provides an HTTP API for interacting with a Beancount ledger file"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beancount = "^2.3.4"
fastapi = "^0.71.0"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
boto3 = "^1.20.31"
PyJWT = {extras = ["crypto"], version = "^2.3.0"}

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
