[tool.poetry]
name = "bapi"
version = "0.1.0"
description = "The Beancount API (bapi) provides an HTTP API for interacting with a Beancount ledger file"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beancount = "^2.3.4"
fastapi = "^0.71.0"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
boto3 = "^1.20.31"
PyJWT = {extras = ["crypto"], version = "^2.3.0"}
bdantic = "^0.2.4"
redis = "^4.1.2"
cachetools = "^5.0.0"
loguru = "^0.6.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}
pytest = "^6.2.5"
flake8 = "^4.0.1"
beancount-stubs = "^0.1.3"
jmespath = "^0.10.0"
types-redis = "^4.1.15"
mkdocs = "^1.2.3"
mkdocs-render-swagger-plugin = "^0.0.3"
mkdocs-material = "^8.1.10"
boto3-type-annotations-with-docs = "^0.3.1"
types-cachetools = "^4.2.9"
isort = "^5.10.1"
mypy = "^0.931"
coverage = "^6.3.1"
testcontainers = "^3.4.2"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
